docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  name: docker-registry
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
        path: /
